// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

syntax = "proto3";
package org.example.workflow.domain;

option java_outer_classname = "OuterTransferState";

message TransferState {
  string from = 1;
  string to = 2;
  double amount = 3;
  string log  = 4;
  repeated string sign_offs = 5;
}